tests/ui/errors/remap-path-prefix-diagnostics.only-diag-in-deps.stderr
error[E0277]: `A` doesn't implement `std::fmt::Display`
  --> $DIR/remap-path-prefix-diagnostics.rs:LL:COL
   |
LL | impl r#trait::Trait for A {}
   |                         ^ the trait `std::fmt::Display` is not implemented for `A`
   |
note: required by a bound in `Trait`
  --> $DIR/auxiliary/trait-diag.rs:LL:COL
   |
LL | pub trait Trait: std::fmt::Display {}
   |                  ^^^^^^^^^^^^^^^^^ required by this bound in `Trait`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
